Add tooltip to brewery